# sitios-minca

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
alembic/versions/: f8c9fafeb8e3_create_place_table.py
app/: __init__.py  main.py
app/api/: api.py
app/api/endpoints/: places.py
app/core/: config.py
app/crud/: crud_place.py  places.py
app/database/: base_class.py  session.py
app/model/: place.py
app/models/: place.py  user.py
app/schemas/: place.py
core/: config.py
database/: session.py
