[tool.poetry]
name = "sitios-minca"
version = "0.1.0"
description = "Una aplicacion de administrar sitios turisticos en minca"
authors = ["esteban <estebandeleon8080@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
SQLAlchemy = "^1.4.27"
alembic = "^1.7.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
